Ajuste de envio

--- a/iniciodesesion.html
+++ b/iniciodesesion.html
@@ -40,7 +40,7 @@
                 <input type="password" id="password" placeholder="Ingresa tu contraseña" required>
             </div>
             <button type="submit">Entrar</button>
-            <p class="registro">¿No tienes cuenta? <a href="registro.html">Regístrate aquí</a></p>
+            <p class="registro">No tiene cuenta pues aca puede crear una <a href="registro.html">Regístrate aquí</a></p>
         </form>
     </section>
 
